--- a/the-sound-of-trip-hop.html
+++ b/the-sound-of-trip-hop.html
@@ -20,16 +20,83 @@
                 <a href="https://daily.bandcamp.com/">Bandcamp Daily</a>
                 <span>
                     <a href="https://daily.bandcamp.com/lists">lists</a>
-                    <span>.</span>
+                    <span>·</span>
                     <a href="https://daily.bandcamp.com/features">features</a>
-                    <span>.</span>
+                    <span>·</span>
                     <a href="https://daily.bandcamp.com/album-of-the-day">album of the day</a>
-                    <span>.</span>
+                    <span>·</span>
                     <a href="https://daily.bandcamp.com/lists/modern-trip-hop-list">view all</a>
                 </span>
                 <button>Search</button>
             </nav>
         </header>
+        <main>
+            <article>
+                <a href="https://daily.bandcamp.com/lists">LISTS</a>
+                <h1>The Sound of Trip-Hop, Past and Present</h1>
+                <p>
+                    By <a href="https://daily.bandcamp.com/contributors/catwoods">Cat Woods</a>
+                    · September 23,2021
+                </p>
+                <div>
+                    <button>Play</button>
+                    <img src="./images/new-cover.jpg" alt="">
+                </div>
+                <div class="container" style="display: flex;">
+                    <div class="column">
+                        <span>
+                            <a href="https://f4.bcbits.com/img/0024888549_20.jpg">
+                                <img src="./images/sneaker-pimps-profile-pic.jpg" alt="">
+                            </a>
+                            <a href="https://sneakerpimps.bandcamp.com/">Sneaker Pimps</a>
+                            <span>Los Angeles, California</span>
+                            <button>Follow</button>
+                        </span>
+                    </div>
+                    <div class="column">
+                        <p>
+                            The definition of “trip-hop” is a slippery one; even one of the genre’s pioneers 
+                            has trouble pinning it down. “Essentially, it needs to have a down-tempo beat, 
+                            to be hypnotic and narcotic to an extent—that chilled-out, slowed down feeling,” 
+                            says <a href="https://sneakerpimps.bandcamp.com/music">Sneaker Pimps</a>’s 
+                            Liam Howe, whose album 
+                            <a href="https://sneakerpimps.bandcamp.com/album/becoming-x">Becoming X</a> 
+                            was one of the genre’s foundational LPs. “It also has to have a little bit of dub, 
+                            a bit of funk, soul, and jazz. We put quite a lot of guitars and folk music into it 
+                            as well, and if you push genres like hip-hop and jazz as far as they can go, 
+                            then you come up with a new amalgamation of sound.”
+                        </p>
+                        <div class="player-container" style="display: flex;">
+                            <img src="./images/album-cover.jpg" alt="">
+                            <audio src="" controls></audio>
+                            <span style="display: flex; flex-direction: column;">
+                                <a href="https://sneakerpimps.bandcamp.com/album/squaring-the-circle?action=buy">
+                                    BUY
+                                </a>
+                                <button>Wishlist</button>
+                                <a href="https://sneakerpimps.bandcamp.com/album/squaring-the-circle">
+                                    GO TO ALBUM
+                                </a>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <span>
+                            <span>
+                                Merch for this release: Compact Disc (CD), 2 x Vinyl LP, T-Shirt/Apparel, 
+                                , Poster/Print
+                            </span>
+                            <img src="./images/album-merch1.jpg" alt="">
+                            <span>
+                                <img src="./images/album-merch2.jpg" alt="">
+                                <img src="./images/album-merch3.jpg" alt="">
+                                <img src="./images/album-merch4.jpg" alt="">
+                            </span>
+                        </span>
+                    </div>
+                </div>
+            </article>
+        </main>
         
     </body>
 </html>
