Tidy up images folder

--- a/the-sound-of-trip-hop.html
+++ b/the-sound-of-trip-hop.html
@@ -40,13 +40,13 @@
                 </p>
                 <div>
                     <button>Play</button>
-                    <img src="./images/new-cover.jpg" alt="">
+                    <img src="./images/bandcamp/new-cover.jpg" alt="">
                 </div>
                 <div class="container" style="display: flex;">
                     <div class="column">
                         <span>
                             <a href="https://f4.bcbits.com/img/0024888549_20.jpg">
-                                <img src="./images/sneaker-pimps-profile-pic.jpg" alt="">
+                                <img src="./images/bandcamp/profile-pics/sneaker-pimps.jpg" alt="">
                             </a>
                             <a href="https://sneakerpimps.bandcamp.com/">Sneaker Pimps</a>
                             <span>Los Angeles, California</span>
@@ -67,7 +67,7 @@
                             then you come up with a new amalgamation of sound.”
                         </p>
                         <div class="player-container" style="display: flex;">
-                            <img src="./images/album-cover.jpg" alt="">
+                            <img src="./images/bandcamp/covers/fighter.jpg" alt="">
                             <audio src="" controls></audio>
                             <span style="display: flex; flex-direction: column;">
                                 <a href="https://sneakerpimps.bandcamp.com/album/squaring-the-circle?action=buy">
@@ -79,6 +79,12 @@
                                 </a>
                             </span>
                         </div>
+                        <span class="article-end"></span>
+                        <button class="tag">electronic</button>
+                        <span>
+                            Read more in 
+                            <a href="https://daily.bandcamp.com/genres/electronic">Electronic →</a>
+                        </span>
                     </div>
                     <div class="column">
                         <span>
@@ -86,16 +92,29 @@
                                 Merch for this release: Compact Disc (CD), 2 x Vinyl LP, T-Shirt/Apparel, 
                                 , Poster/Print
                             </span>
-                            <img src="./images/album-merch1.jpg" alt="">
+                            <img src="./images/bandcamp/album-merch/fighter1.jpg" alt="">
                             <span>
-                                <img src="./images/album-merch2.jpg" alt="">
-                                <img src="./images/album-merch3.jpg" alt="">
-                                <img src="./images/album-merch4.jpg" alt="">
+                                <img src="./images/bandcamp/album-merch/fighter2.jpg" alt="">
+                                <img src="./images/bandcamp/album-merch/fighter3.jpg" alt="">
+                                <img src="./images/bandcamp/album-merch/fighter4.jpg" alt="">
                             </span>
                         </span>
                     </div>
                 </div>
             </article>
+            <div>
+                <h3>Top Stories</h3>
+                <div class="stories-container">
+                    <article>
+                        <img src="./images/bandcamp/top-stories/top-stories1.jpg" alt="">
+                        <p>
+                            <a href="https://daily.bandcamp.com/lists">LISTS</a>
+                            · September 24, 2021
+                        </p>
+                        <h4>RP Boo, Jana Rush, and DJ Manny’s Guide to Footwork</h4>
+                    </article>
+                </div>
+            </div>
         </main>
         
     </body>
