finish page html structure

--- a/the-sound-of-trip-hop.html
+++ b/the-sound-of-trip-hop.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
         <title>The Sound of Trip-Hop, Past and Present | Bandcamp Daily</title>
     </head>
     <body>
@@ -79,6 +80,30 @@
                                 </a>
                             </span>
                         </div>
+                        <p>
+                            That “new amalgamation of sound” first began taking shape in the early ‘90s. 
+                            Massive Attack’s 1991 album Blue Lines is considered the origin point of the genre, 
+                            a blueprint for how to blend hip-hop, synth, and dub into a commercial product. 
+                            Portishead’s Dummy arrived three years later, and immediately became the dinner 
+                            party album for the cool set, introducing the world to the gorgeous, ghostly vocals 
+                            of Beth Gibbons. Now, some 20 years later, traces of the genre can be heard in the 
+                            music of FKA Twigs, 
+                            <a href="https://daily.bandcamp.com/certified/serpentwithfeet-artist-of-the-week-profile">
+                                serpentwithfeet
+                            </a>, 
+                            <a href="https://p-a-n.bandcamp.com/album/-">Arca</a>, and the xx, and the Sneaker 
+                            Pimps themselves have ended a two-decade hiatus, returning with their fourth studio 
+                            album, 
+                            <a href="https://sneakerpimps.bandcamp.com/album/squaring-the-circle">
+                                Squaring the Circle
+                            </a>. And though it’s primarily associated with the UK, these days there are more 
+                            than a few notable international acts mining trip-hop to inform their own sound.
+                        </p>
+                        <p>
+                            These are just a few of the new faces of trip-hop.
+                        </p>
+                        <h2>Sneaker Pimps</h2>
+                        <a href="https://sneakerpimps.bandcamp.com/album/becoming-x">Becoming X</a>
                         <span class="article-end"></span>
                         <button class="tag">electronic</button>
                         <span>
@@ -102,20 +127,104 @@
                     </div>
                 </div>
             </article>
+        </main>
+        <div>
+            <h3>Top Stories</h3>
+            <div class="stories-container" style="display: flex;">
+                <article>
+                    <img src="./images/bandcamp/top-stories/top-stories1.jpg" alt="">
+                    <p>
+                        <a href="https://daily.bandcamp.com/lists">LISTS</a>
+                        · September 24, 2021
+                    </p>
+                    <a href="https://daily.bandcamp.com/lists/footwork-chicago-list">
+                        RP Boo, Jana Rush, and DJ Manny’s Guide to Footwork
+                    </a>
+                </article>
+                <article>
+                    <img src="./images/bandcamp/top-stories/top-stories2.jpg" alt="">
+                    <p>
+                        <a href="https://daily.bandcamp.com/lists">LISTS</a>
+                        · September 23, 2021
+                    </p>
+                    <a href="https://daily.bandcamp.com/lists/jihad-the-roughneck-discography-list">
+                        A Guide to Jihad the Roughneck’s Fiercely Independent Rap Catalog
+                    </a>
+                </article>
+                <article>
+                    <img src="./images/bandcamp/top-stories/top-stories3.jpg" alt="">
+                    <p>
+                        <a href="https://daily.bandcamp.com/lists">LISTS</a>
+                        · September 22, 2021
+                    </p>
+                    <a href="https://daily.bandcamp.com/lists/tabletop-game-soundracks-list">
+                        Enter the Dungeon With These Tabletop Game Soundtracks
+                    </a>
+                </article>
+            </div>
+        </div>
+        <div>
+            <h3>Latest</h3>
+            <a href="https://daily.bandcamp.com/latest">see all stories</a>
+            <div class="stories-container" style="display: flex;">
+                <article>
+                    <img src="./images/bandcamp/top-stories/top-stories1.jpg" alt="">
+                    <a href="https://daily.bandcamp.com/lists/footwork-chicago-list">
+                        RP Boo, Jana Rush, and DJ Manny’s Guide to Footwork
+                    </a>
+                </article>
+                <article>
+                    <img src="./images/bandcamp/latest/latest1.jpg" alt="">
+                    <a href="https://daily.bandcamp.com/label-profile/heimat-der-katastrophe-label-profile">
+                        Heimat der Katastrophe’s Worldbuilding Approach to Dungeon Synth
+                    </a>
+                </article>
+                <article>
+                    <img src="./images/bandcamp/latest/latest2.jpg" alt="">
+                    <a href="https://daily.bandcamp.com/seven-essential-releases/essential-releases-september-24-2021">
+                        Essential Releases, September 24, 2021
+                    </a>
+                </article>
+                <article>
+                    <img src="./images/bandcamp/latest/latest3.jpg" alt="">
+                    <a href="https://daily.bandcamp.com/album-of-the-day/ada-lea-one-hand-on-the-steering-wheel-the-other-sewing-a-garden-review">
+                        Ada Lea, “one hand on the steering wheel the other sewing a garden”
+                    </a>
+                </article>
+                <article>
+                    <img src="./images/bandcamp/latest/latest4.jpg" alt="">
+                    <a href="https://daily.bandcamp.com/features/toni-parera-sequences-interview">
+                        Revisiting the Romantic Sounds of Toni Parera’s ‘80s Ambient Cassettes
+                    </a>
+                </article>
+                <article>
+                    <img src="./images/bandcamp/top-stories/top-stories2.jpg" alt="">
+                    <a href="https://daily.bandcamp.com/lists/jihad-the-roughneck-discography-list">
+                        A Guide to Jihad the Roughneck’s Fiercely Independent Rap Catalog
+                    </a>
+                </article>
+            </div>
+        </div>
+        <div>
+            <h3>On Bandcamp Radio </h3>
+            <a href="https://bandcamp.com/?show_archive=1">see all</a>
             <div>
-                <h3>Top Stories</h3>
-                <div class="stories-container">
-                    <article>
-                        <img src="./images/bandcamp/top-stories/top-stories1.jpg" alt="">
-                        <p>
-                            <a href="https://daily.bandcamp.com/lists">LISTS</a>
-                            · September 24, 2021
-                        </p>
-                        <h4>RP Boo, Jana Rush, and DJ Manny’s Guide to Footwork</h4>
-                    </article>
+                <img src="images/bandcamp/bandcamp-radio.jpg" alt="">
+                <div style="display: flex;">
+                    <p>Listen to the latest episode of Bandcamp Radio.</p>
+                    <a href="https://bandcamp.com/?play=1">Listen now →</a>
                 </div>
             </div>
-        </main>
-        
+        </div>
     </body>
+    <footer>
+        <a href="https://bandcamp.com/?from=logo">Bandcamp</a>
+        <span>
+            <a href="https://bandcamp.com/terms_of_use">terms of use</a>
+            <a href="https://bandcamp.com/privacy">privacy</a>
+            <a href="https://bandcamp.com/copyright">copyright policy</a>
+            <a href="https://bandcamp.com/help_contact">help</a>
+            <a href="">switch to mobile view</a>
+        </span>
+    </footer>
 </html>
