fix html to show as unlogged

--- a/the-sound-of-trip-hop.html
+++ b/the-sound-of-trip-hop.html
@@ -12,9 +12,8 @@
             <nav>
                 <a href="https://bandcamp.com/">Bandcamp</a>
                 <span>
-                    <a href="https://bandcamp.com/nmunoz303/feed">Feed</a>
-                    <a href="https://bandcamp.com/nmunoz303/wishlist">Wishlist</a>
-                    <button>Account</button>
+                    <a href="">sign up</a>
+                    <a href="https://bandcamp.com/login?from=menubar">log in</a>
                 </span>
             </nav>
             <nav>
