add nav bars css

--- a/the-sound-of-trip-hop.html
+++ b/the-sound-of-trip-hop.html
@@ -5,35 +5,42 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
+        <script src="https://kit.fontawesome.com/dffe8b7b3b.js" crossorigin="anonymous"></script>
         <title>The Sound of Trip-Hop, Past and Present | Bandcamp Daily</title>
     </head>
     <body>
         <header>
-            <nav>
-                <a href="https://bandcamp.com/">Bandcamp</a>
-                <span>
-                    <a href="">sign up</a>
-                    <a href="https://bandcamp.com/login?from=menubar">log in</a>
-                </span>
+            <nav class="menu-nav">
+                <a href="https://bandcamp.com/">
+                    <img src="./images/bandcamp/logo1.png" alt="" class="nav-logo">
+                </a>
+                <ul>
+                    <li class="nav-button">
+                        <a href="">sign up</a>
+                    </li>
+                    <li class="nav-button">
+                        <a href="https://bandcamp.com/login?from=menubar">log in</a>
+                    </li>
+                </ul>
             </nav>
-            <nav>
-                <a href="https://daily.bandcamp.com/">Bandcamp Daily</a>
-                <span>
-                    <a href="https://daily.bandcamp.com/lists">lists</a>
+            <nav class="daily-nav">
+                <a href="https://daily.bandcamp.com/" class="daily-link strong">Bandcamp Daily</a>
+                <span class="daily-links-container">
+                    <a href="https://daily.bandcamp.com/lists" class="daily-link">lists</a>
                     <span>·</span>
-                    <a href="https://daily.bandcamp.com/features">features</a>
+                    <a href="https://daily.bandcamp.com/features" class="daily-link">features</a>
                     <span>·</span>
-                    <a href="https://daily.bandcamp.com/album-of-the-day">album of the day</a>
+                    <a href="https://daily.bandcamp.com/album-of-the-day" class="daily-link">album of the day</a>
                     <span>·</span>
-                    <a href="https://daily.bandcamp.com/lists/modern-trip-hop-list">view all</a>
+                    <a href="https://daily.bandcamp.com/lists/modern-trip-hop-list" class="daily-link">view all</a>
                 </span>
-                <button>Search</button>
+                <span class="fa-solid fa-magnifying-glass"></span>
             </nav>
         </header>
         <main>
             <article>
-                <a href="https://daily.bandcamp.com/lists">LISTS</a>
-                <h1>The Sound of Trip-Hop, Past and Present</h1>
+                <a href="https://daily.bandcamp.com/lists" >LISTS</a>
+                <h1 >The Sound of Trip-Hop, Past and Present</h1>
                 <p>
                     By <a href="https://daily.bandcamp.com/contributors/catwoods">Cat Woods</a>
                     · September 23,2021
