--- a/the-sound-of-trip-hop.html
+++ b/the-sound-of-trip-hop.html
@@ -6,7 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="normalize.css">
         <link rel="stylesheet" href="style.css">
-        <script src="https://kit.fontawesome.com/dffe8b7b3b.js" crossorigin="anonymous"></script>
         <title>The Sound of Trip-Hop, Past and Present | Bandcamp Daily</title>
     </head>
     <body>
@@ -35,17 +34,19 @@
                     <span>·</span>
                     <a href="https://daily.bandcamp.com/lists/modern-trip-hop-list" class="daily-link">view all</a>
                 </span>
-                <span class="fa-solid fa-magnifying-glass"></span>
+                <button id="search-button"></button>
             </nav>
         </header>
         <main>
-            <article>
-                <a href="https://daily.bandcamp.com/lists" >LISTS</a>
-                <h1 >The Sound of Trip-Hop, Past and Present</h1>
-                <p>
-                    By <a href="https://daily.bandcamp.com/contributors/catwoods">Cat Woods</a>
-                    · September 23,2021
-                </p>
+            <article id="main-article">
+                <div class="article-header">
+                    <a href="https://daily.bandcamp.com/lists" class="link1">LISTS</a>
+                    <h1 >The Sound of Trip-Hop, Past and Present</h1>
+                    <p>
+                        By <a href="https://daily.bandcamp.com/contributors/catwoods" class="link2">Cat Woods</a>
+                        · September 23,2021
+                    </p>
+                </div>
                 <div class="cover-container">
                     <button id="play-button"></button>
                     <img src="./images/bandcamp/new-cover.jpg" alt="">
@@ -58,7 +59,7 @@
                             </a>
                             <a href="https://sneakerpimps.bandcamp.com/">Sneaker Pimps</a>
                             <span>Los Angeles, California</span>
-                            <button>Follow</button>
+                            <button>FOLLOW</button>
                         </span>
                     </div>
                     <div class="mid-column">
@@ -66,9 +67,9 @@
                             The definition of “trip-hop” is a slippery one; even one of the genre’s pioneers 
                             has trouble pinning it down. “Essentially, it needs to have a down-tempo beat, 
                             to be hypnotic and narcotic to an extent—that chilled-out, slowed down feeling,” 
-                            says <a href="https://sneakerpimps.bandcamp.com/music">Sneaker Pimps</a>’s 
+                            says <a href="https://sneakerpimps.bandcamp.com/music" class="link2">Sneaker Pimps</a>’s 
                             Liam Howe, whose album 
-                            <a href="https://sneakerpimps.bandcamp.com/album/becoming-x">Becoming X</a> 
+                            <a href="https://sneakerpimps.bandcamp.com/album/becoming-x" class="link2">Becoming X</a> 
                             was one of the genre’s foundational LPs. “It also has to have a little bit of dub, 
                             a bit of funk, soul, and jazz. We put quite a lot of guitars and folk music into it 
                             as well, and if you push genres like hip-hop and jazz as far as they can go, 
@@ -83,7 +84,7 @@
                                 <a href="https://sneakerpimps.bandcamp.com/album/squaring-the-circle?action=buy">
                                     BUY
                                 </a>
-                                <button>Wishlist</button>
+                                <button></button>
                                 <a href="https://sneakerpimps.bandcamp.com/album/squaring-the-circle">
                                     GO TO ALBUM
                                 </a>
@@ -97,13 +98,13 @@
                             party album for the cool set, introducing the world to the gorgeous, ghostly vocals 
                             of Beth Gibbons. Now, some 20 years later, traces of the genre can be heard in the 
                             music of FKA Twigs, 
-                            <a href="https://daily.bandcamp.com/certified/serpentwithfeet-artist-of-the-week-profile">
+                            <a href="https://daily.bandcamp.com/certified/serpentwithfeet-artist-of-the-week-profile" class="link2">
                                 serpentwithfeet
                             </a>, 
-                            <a href="https://p-a-n.bandcamp.com/album/-">Arca</a>, and the xx, and the Sneaker 
+                            <a href="https://p-a-n.bandcamp.com/album/-" class="link2">Arca</a>, and the xx, and the Sneaker 
                             Pimps themselves have ended a two-decade hiatus, returning with their fourth studio 
                             album, 
-                            <a href="https://sneakerpimps.bandcamp.com/album/squaring-the-circle">
+                            <a href="https://sneakerpimps.bandcamp.com/album/squaring-the-circle" class="link2">
                                 Squaring the Circle
                             </a>. And though it’s primarily associated with the UK, these days there are more 
                             than a few notable international acts mining trip-hop to inform their own sound.
@@ -112,12 +113,12 @@
                             These are just a few of the new faces of trip-hop.
                         </p>
                         <h2>Sneaker Pimps</h2>
-                        <a href="https://sneakerpimps.bandcamp.com/album/becoming-x">Becoming X</a>
+                        <a href="https://sneakerpimps.bandcamp.com/album/becoming-x" class="link3">Becoming X</a>
                         <div class="article-end"></div>
                         <a href="https://bandcamp.com/tag/electronic" class="tag">electronic</a>
                         <p class="read-more">
                             Read more in 
-                            <a href="https://daily.bandcamp.com/genres/electronic">Electronic →</a>
+                            <a href="https://daily.bandcamp.com/genres/electronic" class="link2">electronic →</a>
                         </p>
                     </div>
                     <div class="side-column">
@@ -142,31 +143,31 @@
             <div class="stories-container">
                 <article>
                     <img src="./images/bandcamp/top-stories/top-stories1.jpg" alt="">
-                    <p>
-                        <a href="https://daily.bandcamp.com/lists">LISTS</a>
+                    <p class="stories-footer">
+                        <a href="https://daily.bandcamp.com/lists" class="link1">LISTS</a>
                         · September 24, 2021
                     </p>
-                    <a href="https://daily.bandcamp.com/lists/footwork-chicago-list">
+                    <a href="https://daily.bandcamp.com/lists/footwork-chicago-list" class="link4">
                         RP Boo, Jana Rush, and DJ Manny’s Guide to Footwork
                     </a>
                 </article>
                 <article>
                     <img src="./images/bandcamp/top-stories/top-stories2.jpg" alt="">
-                    <p>
-                        <a href="https://daily.bandcamp.com/lists">LISTS</a>
+                    <p class="stories-footer">
+                        <a href="https://daily.bandcamp.com/lists" class="link1">LISTS</a>
                         · September 23, 2021
                     </p>
-                    <a href="https://daily.bandcamp.com/lists/jihad-the-roughneck-discography-list">
+                    <a href="https://daily.bandcamp.com/lists/jihad-the-roughneck-discography-list" class="link4">
                         A Guide to Jihad the Roughneck’s Fiercely Independent Rap Catalog
                     </a>
                 </article>
                 <article>
                     <img src="./images/bandcamp/top-stories/top-stories3.jpg" alt="">
-                    <p>
-                        <a href="https://daily.bandcamp.com/lists">LISTS</a>
+                    <p class="stories-footer">
+                        <a href="https://daily.bandcamp.com/lists" class="link1">LISTS</a>
                         · September 22, 2021
                     </p>
-                    <a href="https://daily.bandcamp.com/lists/tabletop-game-soundracks-list">
+                    <a href="https://daily.bandcamp.com/lists/tabletop-game-soundracks-list" class="link4">
                         Enter the Dungeon With These Tabletop Game Soundtracks
                     </a>
                 </article>
@@ -180,37 +181,37 @@
             <div class="stories-container">
                 <article>
                     <img src="./images/bandcamp/top-stories/top-stories1.jpg" alt="">
-                    <a href="https://daily.bandcamp.com/lists/footwork-chicago-list">
+                    <a href="https://daily.bandcamp.com/lists/footwork-chicago-list" class="link4">
                         RP Boo, Jana Rush, and DJ Manny’s Guide to Footwork
                     </a>
                 </article>
                 <article>
                     <img src="./images/bandcamp/latest/latest1.jpg" alt="">
-                    <a href="https://daily.bandcamp.com/label-profile/heimat-der-katastrophe-label-profile">
+                    <a href="https://daily.bandcamp.com/label-profile/heimat-der-katastrophe-label-profile" class="link4">
                         Heimat der Katastrophe’s Worldbuilding Approach to Dungeon Synth
                     </a>
                 </article>
                 <article>
                     <img src="./images/bandcamp/latest/latest2.jpg" alt="">
-                    <a href="https://daily.bandcamp.com/seven-essential-releases/essential-releases-september-24-2021">
+                    <a href="https://daily.bandcamp.com/seven-essential-releases/essential-releases-september-24-2021" class="link4">
                         Essential Releases, September 24, 2021
                     </a>
                 </article>
                 <article>
                     <img src="./images/bandcamp/latest/latest3.jpg" alt="">
-                    <a href="https://daily.bandcamp.com/album-of-the-day/ada-lea-one-hand-on-the-steering-wheel-the-other-sewing-a-garden-review">
+                    <a href="https://daily.bandcamp.com/album-of-the-day/ada-lea-one-hand-on-the-steering-wheel-the-other-sewing-a-garden-review" class="link4">
                         Ada Lea, “one hand on the steering wheel the other sewing a garden”
                     </a>
                 </article>
                 <article>
                     <img src="./images/bandcamp/latest/latest4.jpg" alt="">
-                    <a href="https://daily.bandcamp.com/features/toni-parera-sequences-interview">
+                    <a href="https://daily.bandcamp.com/features/toni-parera-sequences-interview" class="link4">
                         Revisiting the Romantic Sounds of Toni Parera’s ‘80s Ambient Cassettes
                     </a>
                 </article>
                 <article>
                     <img src="./images/bandcamp/top-stories/top-stories2.jpg" alt="">
-                    <a href="https://daily.bandcamp.com/lists/jihad-the-roughneck-discography-list">
+                    <a href="https://daily.bandcamp.com/lists/jihad-the-roughneck-discography-list" class="link4">
                         A Guide to Jihad the Roughneck’s Fiercely Independent Rap Catalog
                     </a>
                 </article>
@@ -231,7 +232,9 @@
         </div>
     </body>
     <footer>
-        <a href="https://bandcamp.com/?from=logo">Bandcamp</a>
+        <a href="https://bandcamp.com/?from=logo">
+            <img src="./images/bandcamp/logo2.png" alt="">
+        </a>
         <span>
             <a href="https://bandcamp.com/login?from=footer">log in</a>
             <a href="https://bandcamp.com/terms_of_use">terms of use</a>
